adjust syntax colors, add new muted variants

--- a/demos/html.html
+++ b/demos/html.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Arctis</title>
+  </head>
 
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Arctis</title>
-	</head>
-
-	<body>
-
-		<section id="main">
-			<div class="container">
-				<h1>HTML File</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed obcaecati nostrum et explicabo! Fugit
-					consectetur at veritatis aliquid accusantium voluptatem.
-				</p>
-			</div>
-		</section>
-	</body>
-
+  <body>
+    <section id="main">
+      <div class="container">
+        <h1>HTML File</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed obcaecati nostrum et
+          explicabo! Fugit consectetur at veritatis aliquid accusantium voluptatem.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
